#2295 JDK25 and Gradle 9.2 and updated 3rd party libraries.